# adytum

./: Cargo.toml  LICENSE  README.md
arachne/: README.md  package-lock.json  package.json
arachne/main/: bundle.js  index.js  resolver.js  wallet.js
arachne/preload/: index.js
arachne/renderer/: index.html  renderer.js  style.css
cli/: Cargo.toml  README.md
cli/src/: bundle.rs  config.rs  ipfs.rs  main.rs  manifest.rs  wallet.rs
cli/src/commands/: deploy.rs  info.rs  mod.rs  register.rs  resolve.rs
proposals/: OIP-0003-adytum-on-chain-dapp-hosting.md
templates/dapp_bundle/: Cargo.toml
templates/dapp_bundle/src/: lib.rs
templates/dapp_registry/: Cargo.toml
templates/dapp_registry/src/: lib.rs
