[package]
name = "adytum"
version = "0.1.0"
edition = "2021"
description = "CLI for deploying and managing Adytum dapp bundles on Tari Ootle"

[[bin]]
name = "adytum"
path = "src/main.rs"

[dependencies]
anyhow       = "1"
clap         = { version = "4", features = ["derive", "env"] }
dirs         = "5"
hex          = "0.4"
indicatif    = "0.17"
reqwest      = { version = "0.12", features = ["json", "blocking", "multipart"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
sha2         = "0.10"
tokio        = { version = "1", features = ["full"] }
toml         = "0.8"
zip          = "2"
